feat: add kafka-eagle、kraft model